Replace usages of javax.xml.bind.DatatypeConverter (#5083)
* Replace usages of javax.xml.bind.DatatypeConverter

The DatatypeConverter class is no longer provided by the default Java 11 modules

* Replace "UTF-8" with StandardCharsets.UTF_8

Signed-off-by: Wouter Born <github@maindrain.net>
Signed-off-by: Maximilian Hess <mail@ne0h.de>